--- a/RealtimeRendering/MainWindow.xaml
+++ b/RealtimeRendering/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RealtimeRendering"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" SizeToContent="WidthAndHeight">
     <Grid>
-        
+        <Canvas x:Name="DrawCanvas" HorizontalAlignment="Center" VerticalAlignment="Center" Height="770" Width="770" />
     </Grid>
 </Window>
